# DispleasedBirdies-Angry-Birds-clone-

./: CMakeLists.txt  README.md
External Libraries/Box2D/lib/: box2d.lib
angry_birds/: angry_birds.sln
angry_birds/angry_birds/: Graphics.hpp  angry_birds.vcxproj  main.cpp
angry_birds/angry_birds/Debug/: angry_birds.exe.recipe  angry_birds.ilk  vc142.idb
angry_birds/angry_birds/Debug/angry_birds.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  angry_birds.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
content/: highscores_3  map1  map2  map3
include/: DynamicObject.hpp  Graphics.hpp  Map.hpp  config.h.in
precompiled/content/: highscores_1  map1  map2  map3
src/: DynamicObject.cpp  GraphicsGame.cpp  GraphicsMenu.cpp  Map.cpp  main.cpp
